--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "gray-matter": "^4.0.3",
     "markdown-to-jsx": "^7.1.9",
     "next": "13.1.6",
     "react": "18.2.0",
